--- a/src/app/translations/due-dates-calendar-widget_es.po
+++ b/src/app/translations/due-dates-calendar-widget_es.po
@@ -9,28 +9,28 @@ msgstr ""
 "X-Crowdin-File: /widgets/due-dates-calendar-widget/default.pot\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
-"PO-Revision-Date: 2020-05-27 10:27\n"
+"PO-Revision-Date: 2020-06-04 18:41\n"
 
-#: src/app/due_dates_calendar_widget.js:359
+#: src/app/due_dates_calendar_widget.js:357
 msgid "Can't load information from service."
-msgstr ""
+msgstr "No es posible cargar información desde el servicio."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "Día"
 
 #: src/app/due_dates_calendar_widget.js:83
 msgid "Due Dates Calendar Widget"
 msgstr ""
 
-#: src/app/edit-form.js:378
-#: src/app/edit-form.js:49
+#: src/app/edit-form.js:368
+#: src/app/edit-form.js:50
 msgid "Everything"
-msgstr ""
+msgstr "Todo"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
@@ -40,57 +40,57 @@ msgstr "Enero|Febrero|Marzo|Abril|Mayo|Junio|Julio|Agosto|Septiembre|Octubre|Nov
 msgid "Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec"
 msgstr "Ene|Feb|Mar|Abr|May|Jun|Jul|Ago|Sep|Oct|Nov|Dic"
 
-#: src/app/due_dates_calendar_widget.js:368
+#: src/app/due_dates_calendar_widget.js:366
 msgid "No issues corresponding your query, project and schedule field."
 msgstr ""
 
-#: src/app/edit-form.js:308
+#: src/app/edit-form.js:290
 msgid "No projects"
-msgstr ""
+msgstr "Ningún proyecto"
 
-#: src/app/edit-form.js:310
+#: src/app/edit-form.js:292
 msgid "No saved searches"
-msgstr ""
+msgstr "Ninguna búsqueda guardada"
 
-#: src/app/edit-form.js:309
+#: src/app/edit-form.js:291
 msgid "No tags"
-msgstr ""
+msgstr "Ninguna etiqueta"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
 msgstr "¡Uy! Algo ha salido mal..."
 
-#: src/app/edit-form.js:397
+#: src/app/edit-form.js:387
 msgid "Projects"
-msgstr ""
+msgstr "Proyectos"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "Guardar"
 
-#: src/app/edit-form.js:409
+#: src/app/edit-form.js:399
 msgid "Saved searches"
-msgstr ""
+msgstr "Búsquedas guardadas"
 
-#: src/app/edit-form.js:494
+#: src/app/edit-form.js:486
 msgid "Select Schedule field"
 msgstr ""
 
-#: src/app/edit-form.js:479
+#: src/app/edit-form.js:471
 msgid "Select YouTrack"
-msgstr ""
+msgstr "Seleccionar YouTrack"
 
-#: src/app/edit-form.js:509
+#: src/app/edit-form.js:501
 msgid "Select color scheme field"
 msgstr ""
 
-#: src/app/edit-form.js:110
+#: src/app/edit-form.js:111
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "El servicio de YouTrack seleccionado no está disponible"
 
-#: src/app/edit-form.js:463
+#: src/app/edit-form.js:455
 msgid "Set optional title"
-msgstr ""
+msgstr "Establecer título opcional"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
@@ -100,25 +100,25 @@ msgstr "Domingo|Lunes|Martes|Miércoles|Jueves|Viernes|Sábado"
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
 msgstr "Dom|Lun|Mar|Mié|Jue|Vie|Sáb"
 
-#: src/app/edit-form.js:403
+#: src/app/edit-form.js:393
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "Hoy"
 
-#: src/app/edit-form.js:384
+#: src/app/edit-form.js:374
 msgid "Type search query"
-msgstr ""
+msgstr "Escriba la consulta de búsqueda"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "Semana"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "El widget se actualiza cada minuto"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
@@ -130,7 +130,7 @@ msgstr "am|pm"
 
 #: src/app/due_dates_calendar_widget.js:63
 msgid "issues"
-msgstr ""
+msgstr "incidencias"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
