--- a/src/app/translations/due-dates-calendar-widget_de.po
+++ b/src/app/translations/due-dates-calendar-widget_de.po
@@ -11,36 +11,36 @@ msgstr ""
 "X-Crowdin-File-ID: 220756\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
-"PO-Revision-Date: 2020-06-30 11:04\n"
+"PO-Revision-Date: 2020-11-16 21:19\n"
 
-#: src/app/due_dates_calendar_widget.js:359
+#: src/app/due_dates_calendar_widget.js:363
 msgid "Can't load information from service."
-msgstr ""
+msgstr "Daten aus Service können nicht geladen werden."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "Tag"
 
-#: src/app/due_dates_calendar_widget.js:83
+#: src/app/due_dates_calendar_widget.js:87
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "Fälligkeitskalender-Widget"
 
-#: src/app/edit-form.js:378
+#: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "Alles"
 
-#: src/app/edit-form.js:498
+#: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "Feld zum Anwenden eines Farbschemas"
 
-#: src/app/edit-form.js:484
+#: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "Feld zum Planen von Fälligkeitsterminen"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
@@ -52,51 +52,55 @@ msgstr "Jan|Feb|Mär|Apr|Mai|Jun|Jul|Aug|Sep|Okt|Nov|Dez"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "Monat"
 
-#: src/app/due_dates_calendar_widget.js:368
+#: src/app/due_dates_calendar_widget.js:372
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "Es gibt keine Tickets, die Ihrer Abfrage, Ihrem Projekt und Ihrem Zeitplanfeld entsprechen."
 
-#: src/app/edit-form.js:308
+#: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "Keine Projekte"
 
-#: src/app/edit-form.js:310
+#: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "Keine gespeicherte Suchen"
 
-#: src/app/edit-form.js:309
+#: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "Keine Tags"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
 msgstr "Entschuldigung! Etwas ist schiefgegangen."
 
-#: src/app/edit-form.js:460
+#: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "Optionaler Titel"
 
-#: src/app/edit-form.js:397
+#: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "Projekte"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "Speichern"
 
-#: src/app/edit-form.js:409
+#: src/app/edit-form.js:442
 msgid "Saved searches"
+msgstr "Gespeicherte Suchen"
+
+#: src/app/edit-form.js:517
+msgid "Select an available date type field"
 msgstr ""
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "Ausgewählter YouTrack-Service ist nicht verfügbar"
 
-#: src/app/edit-form.js:463
+#: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "Optional Titel eingeben"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
@@ -106,25 +110,25 @@ msgstr "Sonntag|Montag|Dienstag|Mittwoch|Donnerstag|Freitag|Samstag"
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
 msgstr "So|Mo|Di|Mi|Do|Fr|Sa"
 
-#: src/app/edit-form.js:403
+#: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "Tags"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "Heute"
 
-#: src/app/edit-form.js:384
+#: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "Suchanfrage eingeben"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "Woche"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "Widget wird jede Minute aktualisiert"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
@@ -134,9 +138,13 @@ msgstr "Widget wird alle {{minutesCount}} Minuten aktualisiert"
 msgid "am|pm"
 msgstr "AM|PM"
 
-#: src/app/due_dates_calendar_widget.js:63
+#: src/app/due_dates_calendar_widget.js:67
 msgid "issues"
-msgstr ""
+msgstr "Tickets"
+
+#: src/app/due_dates_calendar_widget.js:579
+msgid "more"
+msgstr "mehr"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
