--- a/src/app/translations/due-dates-calendar-widget_es.po
+++ b/src/app/translations/due-dates-calendar-widget_es.po
@@ -11,36 +11,36 @@ msgstr ""
 "X-Crowdin-File-ID: 220756\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
-"PO-Revision-Date: 2020-06-30 11:04\n"
+"PO-Revision-Date: 2020-11-16 21:19\n"
 
-#: src/app/due_dates_calendar_widget.js:359
+#: src/app/due_dates_calendar_widget.js:363
 msgid "Can't load information from service."
-msgstr ""
+msgstr "No es posible cargar información desde el servicio."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "Día"
 
-#: src/app/due_dates_calendar_widget.js:83
+#: src/app/due_dates_calendar_widget.js:87
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "Widget de calendario de fechas de vencimiento"
 
-#: src/app/edit-form.js:378
+#: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "Todo"
 
-#: src/app/edit-form.js:498
+#: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "Campo utilizado para aplicar el esquema de colores"
 
-#: src/app/edit-form.js:484
+#: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "Campo utilizado para programar las fechas de vencimiento"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
@@ -52,51 +52,55 @@ msgstr "Ene|Feb|Mar|Abr|May|Jun|Jul|Ago|Sep|Oct|Nov|Dic"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "Mes"
 
-#: src/app/due_dates_calendar_widget.js:368
+#: src/app/due_dates_calendar_widget.js:372
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "No hay incidencias que coincidan con su consulta, proyecto y campo de programación."
 
-#: src/app/edit-form.js:308
+#: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "Ningún proyecto"
 
-#: src/app/edit-form.js:310
+#: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "Ninguna búsqueda guardada"
 
-#: src/app/edit-form.js:309
+#: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "Ninguna etiqueta"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
 msgstr "¡Uy! Algo ha salido mal..."
 
-#: src/app/edit-form.js:460
+#: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "Título opcional"
 
-#: src/app/edit-form.js:397
+#: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "Proyectos"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "Guardar"
 
-#: src/app/edit-form.js:409
+#: src/app/edit-form.js:442
 msgid "Saved searches"
+msgstr "Búsquedas guardadas"
+
+#: src/app/edit-form.js:517
+msgid "Select an available date type field"
 msgstr ""
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "El servicio de YouTrack seleccionado no está disponible"
 
-#: src/app/edit-form.js:463
+#: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "Establecer título opcional"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
@@ -106,25 +110,25 @@ msgstr "Domingo|Lunes|Martes|Miércoles|Jueves|Viernes|Sábado"
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
 msgstr "Dom|Lun|Mar|Mié|Jue|Vie|Sáb"
 
-#: src/app/edit-form.js:403
+#: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "Hoy"
 
-#: src/app/edit-form.js:384
+#: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "Escriba la consulta de búsqueda"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "Semana"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "El widget se actualiza cada minuto"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
@@ -134,9 +138,13 @@ msgstr "El widget se actualiza cada {{minutesCount}} minutos"
 msgid "am|pm"
 msgstr "am|pm"
 
-#: src/app/due_dates_calendar_widget.js:63
+#: src/app/due_dates_calendar_widget.js:67
 msgid "issues"
-msgstr ""
+msgstr "incidencias"
+
+#: src/app/due_dates_calendar_widget.js:579
+msgid "more"
+msgstr "más"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
