--- a/src/app/translations/due-dates-calendar-widget_ja.po
+++ b/src/app/translations/due-dates-calendar-widget_ja.po
@@ -11,36 +11,36 @@ msgstr ""
 "X-Crowdin-File-ID: 220756\n"
 "Language-Team: Japanese\n"
 "Language: ja_JP\n"
-"PO-Revision-Date: 2020-06-30 11:04\n"
+"PO-Revision-Date: 2020-11-16 21:19\n"
 
-#: src/app/due_dates_calendar_widget.js:359
+#: src/app/due_dates_calendar_widget.js:363
 msgid "Can't load information from service."
-msgstr ""
+msgstr "サービスから情報を読み込むことができません。"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "取り消す"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "日"
 
-#: src/app/due_dates_calendar_widget.js:83
+#: src/app/due_dates_calendar_widget.js:87
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "期日カレンダーウィジェット"
 
-#: src/app/edit-form.js:378
+#: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "すべて"
 
-#: src/app/edit-form.js:498
+#: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "カラースキームの適用に使用されるフィールド"
 
-#: src/app/edit-form.js:484
+#: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "期日の計画に使用されるフィールド"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
@@ -52,51 +52,55 @@ msgstr "1月|2月|3月|4月|5月|6月|7月|8月|9月|10月|11月|12月"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "月"
 
-#: src/app/due_dates_calendar_widget.js:368
+#: src/app/due_dates_calendar_widget.js:372
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "あなたのクエリ、プロジェクト、およびスケジュールフィールドに対応する課題はありません。"
 
-#: src/app/edit-form.js:308
+#: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "プロジェクトがありません"
 
-#: src/app/edit-form.js:310
+#: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "保存した検索条件はありません"
 
-#: src/app/edit-form.js:309
+#: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "タグなし"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
 msgstr "不明なエラーが発生しました..."
 
-#: src/app/edit-form.js:460
+#: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "タイトル（省略可）"
 
-#: src/app/edit-form.js:397
+#: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "プロジェクト"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "保存"
 
-#: src/app/edit-form.js:409
+#: src/app/edit-form.js:442
 msgid "Saved searches"
+msgstr "保存した検索条件"
+
+#: src/app/edit-form.js:517
+msgid "Select an available date type field"
 msgstr ""
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "選択されたYouTrackサービスはご利用いただけません"
 
-#: src/app/edit-form.js:463
+#: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "タイトル（省略可）を設定"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
@@ -106,25 +110,25 @@ msgstr "日曜日|月曜日|火曜日|水曜日|木曜日|金曜日|土曜日"
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
 msgstr "日|月|火|水|木|金|土"
 
-#: src/app/edit-form.js:403
+#: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "タグ"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "今日"
 
-#: src/app/edit-form.js:384
+#: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "検索クエリを入力"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "週"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "ウィジェットは1分ごとに更新されます"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
@@ -134,9 +138,13 @@ msgstr "ウィジェットは{{minutesCount}}分ごとに更新されます"
 msgid "am|pm"
 msgstr "am|pm"
 
-#: src/app/due_dates_calendar_widget.js:63
+#: src/app/due_dates_calendar_widget.js:67
 msgid "issues"
-msgstr ""
+msgstr "課題"
+
+#: src/app/due_dates_calendar_widget.js:579
+msgid "more"
+msgstr "もっと"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
