--- a/src/app/translations/due-dates-calendar-widget_zh.po
+++ b/src/app/translations/due-dates-calendar-widget_zh.po
@@ -2,151 +2,151 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: youtrackjetbrains\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Crowdin-Project: youtrackjetbrains\n"
-"X-Crowdin-Project-ID: 295498\n"
-"X-Crowdin-Language: eo\n"
+"Project-Id-Version: youtrack-custom-localization\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Crowdin-Project: youtrack-custom-localization\n"
+"X-Crowdin-Project-ID: 309400\n"
+"X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /widgets/due-dates-calendar-widget/default.pot\n"
-"X-Crowdin-File-ID: 220756\n"
-"Language-Team: Esperanto\n"
-"Language: eo_UY\n"
-"PO-Revision-Date: 2020-11-16 21:18\n"
+"X-Crowdin-File-ID: 267290\n"
+"Language-Team: Chinese Simplified\n"
+"Language: zh_CN\n"
+"PO-Revision-Date: 2020-11-16 21:21\n"
 
 #: src/app/due_dates_calendar_widget.js:363
 msgid "Can't load information from service."
-msgstr "crwdns9073104:0crwdne9073104:0"
+msgstr "无法从服务中加载信息。"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr "crwdns9073106:0crwdne9073106:0"
+msgstr "取消"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr "crwdns9073108:0crwdne9073108:0"
+msgstr ""
 
 #: src/app/due_dates_calendar_widget.js:87
 msgid "Due Date Calendar Widget"
-msgstr "crwdns9674560:0crwdne9674560:0"
+msgstr ""
 
 #: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr "crwdns9073112:0crwdne9073112:0"
+msgstr "所有"
 
 #: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr "crwdns9674562:0crwdne9674562:0"
+msgstr ""
 
 #: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr "crwdns9674564:0crwdne9674564:0"
+msgstr ""
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
-msgstr "crwdns9073114:0crwdne9073114:0"
+msgstr "1 月|2 月|3 月|4 月|5 月|6 月|7 月|8 月|9 月|10 月|11 月|12 月"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:89
 msgid "Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec"
-msgstr "crwdns9073116:0crwdne9073116:0"
+msgstr "1 月|2 月|3 月|4 月|5 月|6 月|7 月|8 月|9 月|10 月|11 月|12 月"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr "crwdns9223602:0crwdne9223602:0"
+msgstr ""
 
 #: src/app/due_dates_calendar_widget.js:372
 msgid "No issues corresponding your query, project and schedule field."
-msgstr "crwdns9073118:0crwdne9073118:0"
+msgstr ""
 
 #: src/app/edit-form.js:341
 msgid "No projects"
-msgstr "crwdns9073120:0crwdne9073120:0"
+msgstr "没有项目"
 
 #: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr "crwdns9073122:0crwdne9073122:0"
+msgstr "没有保存的搜索"
 
 #: src/app/edit-form.js:342
 msgid "No tags"
-msgstr "crwdns9073124:0crwdne9073124:0"
+msgstr "没有标签"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
-msgstr "crwdns9073126:0crwdne9073126:0"
+msgstr ""
 
 #: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr "crwdns9223604:0crwdne9223604:0"
+msgstr ""
 
 #: src/app/edit-form.js:430
 msgid "Projects"
-msgstr "crwdns9073128:0crwdne9073128:0"
+msgstr "项目"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr "crwdns9073130:0crwdne9073130:0"
+msgstr "保存"
 
 #: src/app/edit-form.js:442
 msgid "Saved searches"
-msgstr "crwdns9073132:0crwdne9073132:0"
+msgstr "保存的搜索"
 
 #: src/app/edit-form.js:517
 msgid "Select an available date type field"
-msgstr "crwdns12780238:0crwdne12780238:0"
+msgstr ""
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr "crwdns9073140:0crwdne9073140:0"
+msgstr "选择的 YoutTrack 服务不可用"
 
 #: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr "crwdns9073142:0crwdne9073142:0"
+msgstr "设置可选标题"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
-msgstr "crwdns9073144:0crwdne9073144:0"
+msgstr "星期日|星期一|星期二|星期三|星期四|星期五|星期六"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:87
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
-msgstr "crwdns9073146:0crwdne9073146:0"
+msgstr "周日|周一|周二|周三|周四|周五|周六"
 
 #: src/app/edit-form.js:436
 msgid "Tags"
-msgstr "crwdns9073148:0crwdne9073148:0"
+msgstr "标签"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr "crwdns9073150:0crwdne9073150:0"
+msgstr ""
 
 #: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr "crwdns9073152:0crwdne9073152:0"
+msgstr "输入搜索查询"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr "crwdns9073154:0crwdne9073154:0"
+msgstr ""
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr "crwdns9073156:0crwdne9073156:0"
+msgstr "微件每分钟刷新一次"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
-msgstr "crwdns9073158:0{{minutesCount}}crwdne9073158:0"
+msgstr ""
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:91
 msgid "am|pm"
-msgstr "crwdns9073160:0crwdne9073160:0"
+msgstr "上午|下午"
 
 #: src/app/due_dates_calendar_widget.js:67
 msgid "issues"
-msgstr "crwdns9073162:0crwdne9073162:0"
+msgstr "问题"
 
 #: src/app/due_dates_calendar_widget.js:579
 msgid "more"
-msgstr "crwdns12701540:0crwdne12701540:0"
+msgstr "更多"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
-msgstr "crwdns9073164:0{{minutesCount}}crwdne9073164:0"
+msgstr ""
 
