--- a/src/app/translations/due-dates-calendar-widget_ko.po
+++ b/src/app/translations/due-dates-calendar-widget_ko.po
@@ -11,142 +11,142 @@ msgstr ""
 "X-Crowdin-File-ID: 267290\n"
 "Language-Team: Korean\n"
 "Language: ko_KR\n"
-"PO-Revision-Date: 2020-11-16 21:21\n"
+"PO-Revision-Date: 2021-02-17 15:14\n"
 
-#: src/app/due_dates_calendar_widget.js:363
+#: src/app/due_dates_calendar_widget.js:366
 msgid "Can't load information from service."
-msgstr ""
+msgstr "서비스에서 정보를 불러올 수 없습니다."
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:58
 msgid "Cancel"
-msgstr ""
+msgstr "취소"
 
 #: src/app/calendar_toolbar.js:44
 msgid "Day"
-msgstr ""
+msgstr "일"
 
-#: src/app/due_dates_calendar_widget.js:87
+#: src/app/due_dates_calendar_widget.js:90
 msgid "Due Date Calendar Widget"
-msgstr ""
+msgstr "기한 캘린더 위젯"
 
 #: src/app/edit-form.js:411
 #: src/app/edit-form.js:49
 msgid "Everything"
-msgstr ""
+msgstr "전체"
 
 #: src/app/edit-form.js:532
 msgid "Field used to apply color scheme"
-msgstr ""
+msgstr "색 구성표 적용에 사용되는 필드"
 
 #: src/app/edit-form.js:518
 msgid "Field used to schedule due dates"
-msgstr ""
+msgstr "기한을 정할 때 사용되는 필드"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:90
 msgid "January|February|March|April|May|June|July|August|September|October|November|December"
-msgstr ""
+msgstr "1월|2월|3월|4월|5월|6월|7월|8월|9월|10월|11월|12월"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:89
 msgid "Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec"
-msgstr ""
+msgstr "1월|2월|3월|4월|5월|6월|7월|8월|9월|10월|11월|12월"
 
 #: src/app/calendar_toolbar.js:49
 msgid "Month"
-msgstr ""
+msgstr "월"
 
-#: src/app/due_dates_calendar_widget.js:372
+#: src/app/due_dates_calendar_widget.js:375
 msgid "No issues corresponding your query, project and schedule field."
-msgstr ""
+msgstr "해당 쿼리, 프로젝트, 일정 필드에 맞는 이슈가 없습니다."
 
 #: src/app/edit-form.js:341
 msgid "No projects"
-msgstr ""
+msgstr "프로젝트가 없습니다"
 
 #: src/app/edit-form.js:343
 msgid "No saved searches"
-msgstr ""
+msgstr "저장된 검색이 없습니다"
 
 #: src/app/edit-form.js:342
 msgid "No tags"
-msgstr ""
+msgstr "태그가 없습니다"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/http-error-handler/http-error-handler.js:4
 msgid "Oops! Something went wrong..."
-msgstr ""
+msgstr "죄송합니다. 오류가 발생했습니다."
 
 #: src/app/edit-form.js:493
 msgid "Optional title"
-msgstr ""
+msgstr "추가 제목"
 
 #: src/app/edit-form.js:430
 msgid "Projects"
-msgstr ""
+msgstr "프로젝트"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/configuration-form/configuration-form.js:47
 msgid "Save"
-msgstr ""
+msgstr "저장"
 
 #: src/app/edit-form.js:442
 msgid "Saved searches"
-msgstr ""
+msgstr "저장된 검색"
 
 #: src/app/edit-form.js:517
 msgid "Select an available date type field"
-msgstr ""
+msgstr "사용 가능한 날짜 유형 필드 선택"
 
 #: src/app/edit-form.js:110
 msgid "Selected YouTrack service is not available"
-msgstr ""
+msgstr "선택한 YouTrack 서비스를 사용할 수 없습니다"
 
 #: src/app/edit-form.js:496
 msgid "Set optional title"
-msgstr ""
+msgstr "추가 제목 설정"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:88
 msgid "Sunday|Monday|Tuesday|Wednesday|Thursday|Friday|Saturday"
-msgstr ""
+msgstr "일요일|월요일|화요일|수요일|목요일|금요일|토요일"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:87
 msgid "Sun|Mon|Tue|Wed|Thu|Fri|Sat"
-msgstr ""
+msgstr "일|월|화|수|목|금|토"
 
 #: src/app/edit-form.js:436
 msgid "Tags"
-msgstr ""
+msgstr "태그"
 
 #: src/app/calendar_toolbar.js:32
 msgid "Today"
-msgstr ""
+msgstr "오늘"
 
 #: src/app/edit-form.js:417
 msgid "Type search query"
-msgstr ""
+msgstr "검색 쿼리 입력"
 
 #: src/app/calendar_toolbar.js:48
 msgid "Week"
-msgstr ""
+msgstr "주"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:69
 msgid "Widget refreshes every minute"
-msgstr ""
+msgstr "위젯은 1분마다 새로고침됩니다"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:70
 msgid "Widget refreshes every {{minutesCount}} minutes"
-msgstr ""
+msgstr "위젯은 {{minutesCount}}분마다 새로고침됩니다"
 
 #: node_modules/hub-dashboard-addons/components/localization/src/localization.js:91
 msgid "am|pm"
-msgstr ""
+msgstr "오전|오후"
 
-#: src/app/due_dates_calendar_widget.js:67
+#: src/app/due_dates_calendar_widget.js:70
 msgid "issues"
-msgstr ""
+msgstr "이슈"
 
-#: src/app/due_dates_calendar_widget.js:579
+#: src/app/due_dates_calendar_widget.js:593
 msgid "more"
-msgstr ""
+msgstr "더보기"
 
 #: node_modules/@jetbrains/hub-widget-ui/src/refresh-period/refresh-period.js:64
 msgid "{{minutesCount}} min"
-msgstr ""
+msgstr "{{minutesCount}}분"
 
